--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
             <h2>Kasivishwanathan</h2>
             <h3>muthamizh nagar, hasthinapuram, chennai, IND</h3>
             <div class="footer-menu">
-                <a href="tel:+919791179519">+91 9791179519</a>
+                <a href="phone:+919791179519">+91 9791179519</a>
                 <p>Email: <a href="mailto:dmkv03@gmail.com?subject=Subject%20here&body=Body%20text%20here">dmkv03@gmail.com</a></p>
             </div>
             <div class="footer-social">
