--- a/index.html
+++ b/index.html
@@ -714,14 +714,14 @@
         Blog End -->
 
 
-        <!-- Footer Start -->
+      <!-- Footer Start -->
 <div class="footer wow fadeIn" data-wow-delay="0.3s">
     <div class="container-fluid">
         <div class="footer-info">
             <h2>Kasivishwanathan</h2>
             <h3>muthamizh nagar, hasthinapuram, chennai, IND</h3>
             <div class="footer-menu">
-                <a href="phone:+919791179519">+91 9791179519</a>
+                <a href="tel:+919791179519">+91 9791179519</a>
                 <p>Email: <a href="mailto:dmkv03@gmail.com?subject=Subject%20here&body=Body%20text%20here">dmkv03@gmail.com</a></p>
             </div>
             <div class="footer-social">
@@ -738,6 +738,9 @@
     </div>
 </div>
 <!-- Footer End -->
+
+
+
         
         
         <!-- Back to top button -->
