--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Favicon -->
         <link rel="icon" href="img/icon.png">
@@ -65,8 +68,8 @@
                                 <div class="typed-text">Web Designer, Web Developer, Front End Developer</div>
                             </div>
                             <div class="hero-btn">
-                                <a class="btn" href="#contact">Hire Me</a>
-                                <a class="btn" href="#contact">Contact Me</a>
+                                <a class="btn" href="dmkv03@gmail.com">Hire Me</a>
+                                <a href="https://wa.me/9791179519" target="_blank"class="btn">Contact Me</a>
                             </div>
                         </div>
                     </div>
@@ -417,7 +420,7 @@
                 <div class="container banner-text">
                     <p>
                         "Crafting narratives through pixels and code"                    </p>
-                    <a href="https://wa.me/1234567890" target="_blank"class="btn">Order Now</a>
+                    <a href="https://wa.me/9791179519" target="_blank"class="btn">Order Now</a>
                 </div>
                 <h6>*limited upto 5 persons</h6>
 
@@ -634,7 +637,7 @@
                         <div class="col-md-8">
                             <div class="contact-form">
                                 <div id="success"></div>
-                                <form action="https://formsubmit.co/dmkv03@gmail.com" method="POST" name="sentMessage" id="contactForm" novalidate="novalidate" >
+                                <form action="https://formspree.io/f/mzbnddjk" method="POST" name="sentMessage" id="contactForm" novalidate="novalidate" >
                                     <div class="control-group">
                                         <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
                                         <p class="help-block"></p>
