--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
     <!-- WhatsApp icon container -->
     <a href="https://wa.me/+919791179519" target="_blank" class="whatsapp-icon">
         <!-- You can replace the src attribute with your own WhatsApp icon image -->
-        <img src="Logo-WhatsApp.png" alt="WhatsApp">
+        <img src="img/Logo-WhatsApp.png" alt="WhatsApp">
     </a>
 
 
