--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <div class="hero-btn">
                                 <a class="btn" href="mailto:dmkv03@gmail.com?subject=Regarding Job Opportunity&body=Hello,%0A%0AI'm interested in discussing job opportunities with you. Please let me know if there are any available positions.%0A%0ARegards,%0A[Your Name]">Hire Me</a>
 
-                                <a href="https://wa.me/9791179519" target="_blank"class="btn">Contact Me</a>
+                                <a href="https://wa.me/+919791179519" target="_blank"class="btn">Contact Me</a>
                             </div>
                         </div>
                     </div>
